[package]
name = "iotics-connector-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12"
actix-rt = "2.6"
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread", "time"] }

# use this if you want to be able to change both repos in the same time
# iotics-grpc-client = { path = "../../iotics-grpc-client-rust" }
iotics-grpc-client = "0.2"

# use this if you want to be able to change both repos in the same time
# iotics-identity = { path = "../iotics-identity-go/ffi/rust" }
iotics-identity = { git = "https://github.com/Iotic-Labs/iotics-identity-go.git" }
