[package]
name = "iotics-connector-engine"
version = "0.3.0"
edition = "2021"
description = "IOTICS Connector Engine"
license = "Apache-2.0"
repository = "https://github.com/Iotic-Labs/connector-engine-rs"
homepage = "https://iotics.com"

[features]
default = []
tls = ["iotics-grpc-client/tls"]

[dependencies]
actix = "0.13"
actix-rt = "2.7"
anyhow = "1.0"
async-trait = "0.1"
dotenv = "0.15"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "time"] }

# use this if you want to be able to change both repos in the same time
# iotics-grpc-client = { path = "../iotics-grpc-client-rs" }
iotics-grpc-client = "4.0"

# use this if you want to be able to change both repos in the same time
# iotics-identity = { path = "../iotics-identity-go/ffi/rust" }
iotics-identity = { git = "https://github.com/Iotic-Labs/iotics-identity-go.git" }
